@@ -1,35 +1,33 @@
 package fr.atesab.xray.screen;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+
+import com.mojang.blaze3d.vertex.PoseStack;
 import fr.atesab.xray.color.BlockEntityTypeIcon;
 import fr.atesab.xray.color.EntityTypeIcon;
 import fr.atesab.xray.color.EnumElement;
 import fr.atesab.xray.config.ESPConfig;
 import fr.atesab.xray.utils.GuiUtils;
 import fr.atesab.xray.widget.XrayButton;
-import net.minecraft.block.entity.BlockEntityType;
-import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.client.gui.widget.ButtonWidget;
-import net.minecraft.client.gui.widget.TextFieldWidget;
-import net.minecraft.client.resource.language.I18n;
-import net.minecraft.entity.EntityType;
-import net.minecraft.item.ItemStack;
-import net.minecraft.registry.Registries;
-import net.minecraft.text.Text;
-import net.minecraft.util.Formatting;
-import net.minecraft.util.Identifier;
+import net.minecraft.ChatFormatting;
+import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.components.EditBox;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.resources.language.I18n;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.network.chat.Component;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.block.entity.BlockEntityType;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
-
-public class XrayEntityMenu extends Screen {
+public class XrayEntityMenu extends XrayScreen {
     public record EntityUnion(EntityType<?> type, BlockEntityType<?> blockType, String text) implements EnumElement {
         EntityUnion(EntityType<?> type) {
             this(type, null, computeText(type, null));
         }
-
         EntityUnion(BlockEntityType<?> blockType) {
             this(null, blockType, computeText(null, blockType));
         }
@@ -44,44 +42,41 @@ public class XrayEntityMenu extends Screen {
         }
 
         @Override
-        public Text getTitle() {
-            return Text.translatable(text());
+        public Component getTitle() {
+            return Component.translatable(text());
         }
 
         static String computeText(EntityType<?> type, BlockEntityType<?> blockType) {
             if (type != null) {
-                return type.getTranslationKey();
+                return type.getDescriptionId();
             } else {
-                Identifier id = Registries.BLOCK_ENTITY_TYPE.getId(blockType);
+                ResourceLocation id = BuiltInRegistries.BLOCK_ENTITY_TYPE.getKey(blockType);
                 if (id == null) {
                     return blockType.getClass().getCanonicalName();
                 }
-                return id.toTranslationKey();
+                return id.toLanguageKey();
             }
         }
     }
-
-    private static final Text ADD = Text.literal("+").formatted(Formatting.GREEN);
-    private static final Text REPLACE = Text.translatable("x13.mod.menu.replace")
-            .formatted(Formatting.YELLOW);
-    private static final Text DELETE = Text.translatable("x13.mod.menu.delete")
-            .formatted(Formatting.RED);
-    private final Screen parent;
-    private final ESPConfig mode;
-    private final List<EntityUnion> config;
-    private final List<EntityUnion> visible = new ArrayList<>();
-    private TextFieldWidget searchBar;
-    private ButtonWidget nextPage;
-    private ButtonWidget lastPage;
+    private static final Component ADD = Component.literal("+").withStyle(ChatFormatting.GREEN);
+    private static final Component REPLACE = Component.translatable("x13.mod.menu.replace")
+            .withStyle(ChatFormatting.YELLOW);
+    private static final Component DELETE = Component.translatable("x13.mod.menu.delete")
+            .withStyle(ChatFormatting.RED);
+    private ESPConfig mode;
+    private List<EntityUnion> config;
+    private List<EntityUnion> visible = new ArrayList<>();
+    private EditBox searchBar;
+    private XrayButton nextPage;
+    private XrayButton lastPage;
     private int elementByPage = 1;
     private int elementsX = 1;
     private int elementsY = 1;
     private int page = 0;
 
     public XrayEntityMenu(Screen parent, ESPConfig mode) {
-        super(Text.literal(mode.getName()));
+        super(Component.literal(mode.getName()), parent);
         this.mode = mode;
-        this.parent = parent;
         this.config = new ArrayList<>();
         this.config.addAll(mode.getEntities().getObjects().stream().map(EntityUnion::new).toList());
         this.config.addAll(mode.getBlockEntities().getObjects().stream().map(EntityUnion::new).toList());
@@ -99,21 +94,21 @@ public class XrayEntityMenu extends Screen {
         int pageTop = height / 2 - sizeY / 2 - 24;
         int pageBottom = height / 2 + sizeY / 2 + 2;
 
-        searchBar = new TextFieldWidget(textRenderer, width / 2 - sizeX / 2, pageTop + 2, sizeX, 16,
-                Text.literal("")) {
+        searchBar = new EditBox(font, width / 2 - sizeX / 2, pageTop + 2, sizeX, 16,
+                Component.literal("")) {
             @Override
             public boolean mouseClicked(double mouseX, double mouseY, int button) {
                 if (button == 1 && mouseX >= this.getX() && mouseX <= this.getX() + this.width && mouseY >= this.getY()
                         && mouseY <= this.getY() + this.height) {
-                    setText("");
+                    setValue("");
                     return true;
                 }
                 return super.mouseClicked(mouseX, mouseY, button);
             }
 
             @Override
-            public void setText(String text) {
-                super.setText(text);
+            public void setValue(String text) {
+                super.setValue(text);
                 updateSearch();
             }
 
@@ -136,29 +131,32 @@ public class XrayEntityMenu extends Screen {
             }
         };
 
-        lastPage = XrayButton.builder(Text.literal("<-"), button -> {
+        lastPage = new XrayButton(width / 2 - 126, pageBottom, 20, 20, Component.literal("<-"), b -> {
             page--;
             updateArrows();
-        }).dimensions(width / 2 - 126, pageBottom, 20, 20).build();
+        });
 
-        ButtonWidget doneBtn = XrayButton.builder(Text.translatable("gui.done"), button -> {
+        XrayButton doneBtn = new XrayButton(width / 2 - 102, pageBottom, 100, 20,
+                Component.translatable("gui.done"), b -> {
             mode.getEntities().setObjects(config.stream().map(EntityUnion::type).filter(Objects::nonNull).toList());
             mode.getBlockEntities().setObjects(config.stream().map(EntityUnion::blockType).filter(Objects::nonNull).toList());
-            client.setScreen(parent);
-        }).dimensions(width / 2 - 102, pageBottom, 100, 20).build();
+            getMinecraft().setScreen(parent);
+        });
 
-        ButtonWidget cancelBtn = XrayButton.builder(Text.translatable("gui.cancel"), button -> client.setScreen(parent)).dimensions(width / 2 + 2, pageBottom, 100, 20).build();
-
-        nextPage = XrayButton.builder(Text.literal("->"), button -> {
+        XrayButton cancelBtn = new XrayButton(width / 2 + 2, pageBottom, 100, 20,
+                Component.translatable("gui.cancel"), b -> {
+            getMinecraft().setScreen(parent);
+        });
+        nextPage = new XrayButton(width / 2 + 106, pageBottom, 20, 20, Component.literal("->"), b -> {
             page++;
             updateArrows();
-        }).dimensions(width / 2 + 106, pageBottom, 20, 20).build();
+        });
 
-        addSelectableChild(searchBar);
-        addDrawableChild(lastPage);
-        addDrawableChild(doneBtn);
-        addDrawableChild(cancelBtn);
-        addDrawableChild(nextPage);
+        addWidget(searchBar);
+        addRenderableWidget(lastPage);
+        addRenderableWidget(doneBtn);
+        addRenderableWidget(cancelBtn);
+        addRenderableWidget(nextPage);
 
         updateArrows();
         updateSearch();
@@ -172,9 +170,9 @@ public class XrayEntityMenu extends Screen {
     }
 
     public void updateSearch() {
-        String query = searchBar.getText().toLowerCase();
+        String query = searchBar.getValue().toLowerCase();
         visible.clear();
-        config.stream().filter(block -> I18n.translate(block.text()).toLowerCase().contains(query))
+        config.stream().filter(block -> I18n.get(block.text()).toLowerCase().contains(query))
                 .forEach(visible::add);
         page = Math.min(visible.size(), page);
         updateArrows();
@@ -185,9 +183,9 @@ public class XrayEntityMenu extends Screen {
     }
 
     @Override
-    public void render(DrawContext context, int mouseX, int mouseY, float partialTick) {
-        renderInGameBackground(context);
-        searchBar.render(context, mouseX, mouseY, partialTick);
+    public void render(GuiGraphics graphics, int mouseX, int mouseY, float partialTick) {
+        renderBackground(graphics,mouseX,mouseY,partialTick);
+        searchBar.render(graphics, mouseX, mouseY, partialTick);
 
         int left = width / 2 - elementsX * 18 / 2;
         int top = height / 2 - elementsY * 18 / 2;
@@ -212,8 +210,8 @@ public class XrayEntityMenu extends Screen {
                 color = 0x44666699;
             }
 
-            context.fill(x, y, x + 18, y + 18, color);
-            GuiUtils.renderItemIdentity(context, stack, x + 1, y + 1);
+            graphics.fill(x, y, x + 18, y + 18, color);
+            GuiUtils.renderItemIdentity(graphics, stack, x + 1, y + 1);
         }
         // add [+] button
         int x = left + (i % elementsX) * 18;
@@ -227,15 +225,18 @@ public class XrayEntityMenu extends Screen {
             color = 0x44669966;
         }
 
-        context.fill(x, y, x + 18, y + 18, color);
-        context.drawText(textRenderer, ADD, x + 18 / 2 - textRenderer.getWidth(ADD) / 2,
-                y + 18 / 2 - textRenderer.fontHeight / 2, color, true);
+        graphics.fill(x, y, x + 18, y + 18, color);
+        graphics.drawString(font, ADD, x + (18 - font.width(ADD)) / 2, y + (18 - font.lineHeight) / 2, color);
 
-        super.render(context, mouseX, mouseY, partialTick);
+        super.render(graphics, mouseX, mouseY, partialTick);
 
         if (hovered != null) {
-            context.drawTooltip(textRenderer,
-                    Arrays.asList(Text.translatable(hoveredBlock.text()), REPLACE, DELETE),
+            graphics.renderTooltip(font,
+                    List.of(
+                            Component.translatable(hoveredBlock.text()).getVisualOrderText(),
+                            REPLACE.getVisualOrderText(),
+                            DELETE.getVisualOrderText()
+                    ),
                     mouseX, mouseY);
         }
     }
@@ -256,7 +257,7 @@ public class XrayEntityMenu extends Screen {
             int y = top + (i / elementsX) * 18;
             if (mouseX >= x && mouseX <= x + 18 && mouseY >= y && mouseY <= y + 18) {
                 if (button == 0) { // left click: replace
-                    client.setScreen(new EntitySelector(this) {
+                    minecraft.setScreen(new EntitySelector(this) {
                         @Override
                         protected void select(EntityUnion selection) {
                             int index = config.indexOf(b);
@@ -282,7 +283,7 @@ public class XrayEntityMenu extends Screen {
         int y = top + (i / elementsX) * 18;
         if (button == 0 && mouseX >= x && mouseX <= x + 18 && mouseY >= y && mouseY <= y + 18) {
             // add
-            client.setScreen(new EntitySelector(this) {
+            minecraft.setScreen(new EntitySelector(this) {
                 @Override
                 protected void select(EntityUnion selection) {
                     config.add(selection);
@@ -292,10 +293,5 @@ public class XrayEntityMenu extends Screen {
             return true;
         }
         return false;
-    }
-
-    @Override
-    public void applyBlur(){
-
     }
 }
